dropdown for 'Centre' alignment fixed

--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -65,6 +65,11 @@ body{
 }
 .reg-wrapper{
   margin-top:10px;
+  .search-patientid{
+    select{
+      width:70px;
+    }
+  }
   .header-logo{
     background: url("./img/jss_logo.png") no-repeat scroll left top transparent;
     color: #ffffff;
